// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToggle Classic theme renders correctly with default settings 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c2 {
  display: inline-block;
  height: 40px;
  padding: 0 24px;
  border: 1px solid #668491;
  font-size: 14px;
  font-weight: 600;
  background-color: #FFFFFF;
  height: 47px;
  font-weight: 900;
}

input:checked ~ .c2 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c2 {
  outline: 3px solid #FFDA7F;
}

.c2:hover {
  background-color: #e5f2ee;
  border-color: #003F2E;
}

input:checked ~ .c2 {
  color: #FFFFFF;
  background-color: #1573e6;
}

input:focus ~ .c2 {
  outline: 0;
}

.c2:hover {
  border-color: #1e499f;
  color: #FFFFFF;
  background-color: #1e499f;
}

.c0 {
  display: inline-block;
}

.c0:not(:first-of-type) {
  margin-left: 10px;
}

.c1 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div
  className="c0"
  size="large"
>
  <input
    className="c1"
    id="guid-12345"
    type="radio"
  />
  <label
    className="c2"
    htmlFor="guid-12345"
    size="large"
  >
    <div
      className="c3"
    >
      Button
    </div>
  </label>
</div>
`;

exports[`ButtonToggle General styling renders correctly when grouped 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c3 {
  display: inline-block;
  height: 40px;
  padding: 0 24px;
  border: 1px solid #668491;
  font-size: 14px;
  font-weight: 600;
  background-color: #FFFFFF;
  height: 47px;
  font-weight: 900;
}

input:checked ~ .c3 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c3 {
  outline: 3px solid #FFDA7F;
}

.c3:hover {
  background-color: #e5f2ee;
  border-color: #003F2E;
}

input:checked ~ .c3 {
  color: #FFFFFF;
  background-color: #1573e6;
}

input:focus ~ .c3 {
  outline: 0;
}

.c3:hover {
  border-color: #1e499f;
  color: #FFFFFF;
  background-color: #1e499f;
}

.c6 .c4 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 .c4 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: inline-block;
}

.c0:not(:first-of-type) {
  margin-left: 10px;
}

.c0:not(:first-of-type) {
  margin-left: 0;
}

.c0:not(:first-of-type) .c2 {
  border-left-width: 0;
}

.c1 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div>
  <ButtonToggle
    grouped={true}
    size="large"
    theme={
      Object {
        "colors": Object {
          "base": "#00A376",
          "baseBlue": "#255BC7",
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "greyDarkBlue50": "#8099a4",
          "info": "#0073C2",
          "primary": "#00805D",
          "secondary": "#006045",
          "success": "#00B000",
          "tertiary": "#003F2E",
          "warning": "#E96400",
          "white": "#FFFFFF",
          "whiteMix": "#e5f2ee",
        },
        "disabled": Object {
          "border": "#4d7080",
          "button": "#e6ebed",
          "buttonText": "rgba(0,0,0,.2)",
          "disabled": "#b3c2c8",
          "input": "#1e499f",
          "text": "#003349",
        },
        "name": "classic",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
  >
    <styled.div
      grouped={true}
      size="large"
      theme={
        Object {
          "colors": Object {
            "base": "#00A376",
            "baseBlue": "#255BC7",
            "border": "#668491",
            "brand": "#00DC00",
            "error": "#C7384F",
            "focus": "#FFDA7F",
            "greyDarkBlue50": "#8099a4",
            "info": "#0073C2",
            "primary": "#00805D",
            "secondary": "#006045",
            "success": "#00B000",
            "tertiary": "#003F2E",
            "warning": "#E96400",
            "white": "#FFFFFF",
            "whiteMix": "#e5f2ee",
          },
          "disabled": Object {
            "border": "#4d7080",
            "button": "#e6ebed",
            "buttonText": "rgba(0,0,0,.2)",
            "disabled": "#b3c2c8",
            "input": "#1e499f",
            "text": "#003349",
          },
          "name": "classic",
          "shadows": Object {
            "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
            "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
            "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
            "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
            "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
          },
          "text": Object {
            "color": "rgba(0,0,0,0.9)",
            "placeholder": "rgba(0,0,0,0.3)",
            "size": "14px",
          },
        }
      }
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bxivhb",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: inline-block;

  &:not(:first-of-type) {
    margin-left: 10px;
  }
  
  ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "propTypes": Object {
              "buttonSize": [Function],
            },
            "render": [Function],
            "styledComponentId": "sc-bxivhb",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        grouped={true}
        size="large"
        theme={
          Object {
            "colors": Object {
              "base": "#00A376",
              "baseBlue": "#255BC7",
              "border": "#668491",
              "brand": "#00DC00",
              "error": "#C7384F",
              "focus": "#FFDA7F",
              "greyDarkBlue50": "#8099a4",
              "info": "#0073C2",
              "primary": "#00805D",
              "secondary": "#006045",
              "success": "#00B000",
              "tertiary": "#003F2E",
              "warning": "#E96400",
              "white": "#FFFFFF",
              "whiteMix": "#e5f2ee",
            },
            "disabled": Object {
              "border": "#4d7080",
              "button": "#e6ebed",
              "buttonText": "rgba(0,0,0,.2)",
              "disabled": "#b3c2c8",
              "input": "#1e499f",
              "text": "#003349",
            },
            "name": "classic",
            "shadows": Object {
              "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
              "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
              "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
              "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
              "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
            },
            "text": Object {
              "color": "rgba(0,0,0,0.9)",
              "placeholder": "rgba(0,0,0,0.3)",
              "size": "14px",
            },
          }
        }
      >
        <div
          className="c0"
          size="large"
        >
          <styled.input
            id="guid-12345"
            type="radio"
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-ifAKCX",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-ifAKCX",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              id="guid-12345"
              type="radio"
            >
              <input
                className="c1"
                id="guid-12345"
                type="radio"
              />
            </StyledComponent>
          </styled.input>
          <styled.label
            grouped={true}
            htmlFor="guid-12345"
            size="large"
            theme={
              Object {
                "colors": Object {
                  "base": "#00A376",
                  "baseBlue": "#255BC7",
                  "border": "#668491",
                  "brand": "#00DC00",
                  "error": "#C7384F",
                  "focus": "#FFDA7F",
                  "greyDarkBlue50": "#8099a4",
                  "info": "#0073C2",
                  "primary": "#00805D",
                  "secondary": "#006045",
                  "success": "#00B000",
                  "tertiary": "#003F2E",
                  "warning": "#E96400",
                  "white": "#FFFFFF",
                  "whiteMix": "#e5f2ee",
                },
                "disabled": Object {
                  "border": "#4d7080",
                  "button": "#e6ebed",
                  "buttonText": "rgba(0,0,0,.2)",
                  "disabled": "#b3c2c8",
                  "input": "#1e499f",
                  "text": "#003349",
                },
                "name": "classic",
                "shadows": Object {
                  "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                  "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                  "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                  "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                  "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
                },
                "text": Object {
                  "color": "rgba(0,0,0,0.9)",
                  "placeholder": "rgba(0,0,0,0.3)",
                  "size": "14px",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c2",
                    "isStatic": false,
                    "lastClassName": "c3",
                    "rules": Array [
                      "
  display: inline-block;
  height: 40px;
  padding: 0 24px;
  border: 1px solid ",
                      [Function],
                      ";
  font-size: ",
                      [Function],
                      ";
  font-weight: 600;
  background-color: ",
                      [Function],
                      ";
  
  input:checked ~ & {
    color: ",
                      [Function],
                      ";
    background-color: ",
                      [Function],
                      ";
  }

  input:focus ~ & {
    outline: 3px solid ",
                      [Function],
                      ";
  }

  &:hover {
    background-color: ",
                      [Function],
                      ";
    border-color: ",
                      [Function],
                      ";
  }

  ",
                      [Function],
                      "

  ",
                      [Function],
                      ";

    ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.label",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "c2",
                  "target": "label",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              grouped={true}
              htmlFor="guid-12345"
              size="large"
              theme={
                Object {
                  "colors": Object {
                    "base": "#00A376",
                    "baseBlue": "#255BC7",
                    "border": "#668491",
                    "brand": "#00DC00",
                    "error": "#C7384F",
                    "focus": "#FFDA7F",
                    "greyDarkBlue50": "#8099a4",
                    "info": "#0073C2",
                    "primary": "#00805D",
                    "secondary": "#006045",
                    "success": "#00B000",
                    "tertiary": "#003F2E",
                    "warning": "#E96400",
                    "white": "#FFFFFF",
                    "whiteMix": "#e5f2ee",
                  },
                  "disabled": Object {
                    "border": "#4d7080",
                    "button": "#e6ebed",
                    "buttonText": "rgba(0,0,0,.2)",
                    "disabled": "#b3c2c8",
                    "input": "#1e499f",
                    "text": "#003349",
                  },
                  "name": "classic",
                  "shadows": Object {
                    "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                    "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                    "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                    "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                    "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
                  },
                  "text": Object {
                    "color": "rgba(0,0,0,0.9)",
                    "placeholder": "rgba(0,0,0,0.3)",
                    "size": "14px",
                  },
                }
              }
            >
              <label
                className="c2 c3"
                htmlFor="guid-12345"
                size="large"
              >
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "c4",
                          "isStatic": true,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "c4",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c4 c5"
                    >
                      Text
                    </div>
                  </StyledComponent>
                </styled.div>
              </label>
            </StyledComponent>
          </styled.label>
        </div>
      </StyledComponent>
    </styled.div>
  </ButtonToggle>
  <ButtonToggle
    grouped={true}
    size="large"
    theme={
      Object {
        "colors": Object {
          "base": "#00A376",
          "baseBlue": "#255BC7",
          "border": "#668491",
          "brand": "#00DC00",
          "error": "#C7384F",
          "focus": "#FFDA7F",
          "greyDarkBlue50": "#8099a4",
          "info": "#0073C2",
          "primary": "#00805D",
          "secondary": "#006045",
          "success": "#00B000",
          "tertiary": "#003F2E",
          "warning": "#E96400",
          "white": "#FFFFFF",
          "whiteMix": "#e5f2ee",
        },
        "disabled": Object {
          "border": "#4d7080",
          "button": "#e6ebed",
          "buttonText": "rgba(0,0,0,.2)",
          "disabled": "#b3c2c8",
          "input": "#1e499f",
          "text": "#003349",
        },
        "name": "classic",
        "shadows": Object {
          "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
          "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
          "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
          "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
          "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
        },
        "text": Object {
          "color": "rgba(0,0,0,0.9)",
          "placeholder": "rgba(0,0,0,0.3)",
          "size": "14px",
        },
      }
    }
  >
    <styled.div
      grouped={true}
      size="large"
      theme={
        Object {
          "colors": Object {
            "base": "#00A376",
            "baseBlue": "#255BC7",
            "border": "#668491",
            "brand": "#00DC00",
            "error": "#C7384F",
            "focus": "#FFDA7F",
            "greyDarkBlue50": "#8099a4",
            "info": "#0073C2",
            "primary": "#00805D",
            "secondary": "#006045",
            "success": "#00B000",
            "tertiary": "#003F2E",
            "warning": "#E96400",
            "white": "#FFFFFF",
            "whiteMix": "#e5f2ee",
          },
          "disabled": Object {
            "border": "#4d7080",
            "button": "#e6ebed",
            "buttonText": "rgba(0,0,0,.2)",
            "disabled": "#b3c2c8",
            "input": "#1e499f",
            "text": "#003349",
          },
          "name": "classic",
          "shadows": Object {
            "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
            "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
            "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
            "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
            "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
          },
          "text": Object {
            "color": "rgba(0,0,0,0.9)",
            "placeholder": "rgba(0,0,0,0.3)",
            "size": "14px",
          },
        }
      }
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bxivhb",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: inline-block;

  &:not(:first-of-type) {
    margin-left: 10px;
  }
  
  ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "propTypes": Object {
              "buttonSize": [Function],
            },
            "render": [Function],
            "styledComponentId": "sc-bxivhb",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        grouped={true}
        size="large"
        theme={
          Object {
            "colors": Object {
              "base": "#00A376",
              "baseBlue": "#255BC7",
              "border": "#668491",
              "brand": "#00DC00",
              "error": "#C7384F",
              "focus": "#FFDA7F",
              "greyDarkBlue50": "#8099a4",
              "info": "#0073C2",
              "primary": "#00805D",
              "secondary": "#006045",
              "success": "#00B000",
              "tertiary": "#003F2E",
              "warning": "#E96400",
              "white": "#FFFFFF",
              "whiteMix": "#e5f2ee",
            },
            "disabled": Object {
              "border": "#4d7080",
              "button": "#e6ebed",
              "buttonText": "rgba(0,0,0,.2)",
              "disabled": "#b3c2c8",
              "input": "#1e499f",
              "text": "#003349",
            },
            "name": "classic",
            "shadows": Object {
              "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
              "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
              "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
              "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
              "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
            },
            "text": Object {
              "color": "rgba(0,0,0,0.9)",
              "placeholder": "rgba(0,0,0,0.3)",
              "size": "14px",
            },
          }
        }
      >
        <div
          className="c0"
          size="large"
        >
          <styled.input
            id="guid-12345"
            type="radio"
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-ifAKCX",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
",
                    ],
                  },
                  "displayName": "styled.input",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-ifAKCX",
                  "target": "input",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              id="guid-12345"
              type="radio"
            >
              <input
                className="c1"
                id="guid-12345"
                type="radio"
              />
            </StyledComponent>
          </styled.input>
          <styled.label
            grouped={true}
            htmlFor="guid-12345"
            size="large"
            theme={
              Object {
                "colors": Object {
                  "base": "#00A376",
                  "baseBlue": "#255BC7",
                  "border": "#668491",
                  "brand": "#00DC00",
                  "error": "#C7384F",
                  "focus": "#FFDA7F",
                  "greyDarkBlue50": "#8099a4",
                  "info": "#0073C2",
                  "primary": "#00805D",
                  "secondary": "#006045",
                  "success": "#00B000",
                  "tertiary": "#003F2E",
                  "warning": "#E96400",
                  "white": "#FFFFFF",
                  "whiteMix": "#e5f2ee",
                },
                "disabled": Object {
                  "border": "#4d7080",
                  "button": "#e6ebed",
                  "buttonText": "rgba(0,0,0,.2)",
                  "disabled": "#b3c2c8",
                  "input": "#1e499f",
                  "text": "#003349",
                },
                "name": "classic",
                "shadows": Object {
                  "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                  "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                  "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                  "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                  "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
                },
                "text": Object {
                  "color": "rgba(0,0,0,0.9)",
                  "placeholder": "rgba(0,0,0,0.3)",
                  "size": "14px",
                },
              }
            }
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c2",
                    "isStatic": false,
                    "lastClassName": "c3",
                    "rules": Array [
                      "
  display: inline-block;
  height: 40px;
  padding: 0 24px;
  border: 1px solid ",
                      [Function],
                      ";
  font-size: ",
                      [Function],
                      ";
  font-weight: 600;
  background-color: ",
                      [Function],
                      ";
  
  input:checked ~ & {
    color: ",
                      [Function],
                      ";
    background-color: ",
                      [Function],
                      ";
  }

  input:focus ~ & {
    outline: 3px solid ",
                      [Function],
                      ";
  }

  &:hover {
    background-color: ",
                      [Function],
                      ";
    border-color: ",
                      [Function],
                      ";
  }

  ",
                      [Function],
                      "

  ",
                      [Function],
                      ";

    ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.label",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "c2",
                  "target": "label",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              grouped={true}
              htmlFor="guid-12345"
              size="large"
              theme={
                Object {
                  "colors": Object {
                    "base": "#00A376",
                    "baseBlue": "#255BC7",
                    "border": "#668491",
                    "brand": "#00DC00",
                    "error": "#C7384F",
                    "focus": "#FFDA7F",
                    "greyDarkBlue50": "#8099a4",
                    "info": "#0073C2",
                    "primary": "#00805D",
                    "secondary": "#006045",
                    "success": "#00B000",
                    "tertiary": "#003F2E",
                    "warning": "#E96400",
                    "white": "#FFFFFF",
                    "whiteMix": "#e5f2ee",
                  },
                  "disabled": Object {
                    "border": "#4d7080",
                    "button": "#e6ebed",
                    "buttonText": "rgba(0,0,0,.2)",
                    "disabled": "#b3c2c8",
                    "input": "#1e499f",
                    "text": "#003349",
                  },
                  "name": "classic",
                  "shadows": Object {
                    "cards": "0 3px 3px 0 rgba(0,20,29,0.2), 0 2px 4px 0 rgba(0,20,29,0.15)",
                    "depth1": "0 5px 5px 0 rgba(0,20,29,0.2), 0 10px 10px 0 rgba(0,20,29,0.1)",
                    "depth2": "0 10px 20px 0 rgba(0,20,29,0.2), 0 20px 40px 0 rgba(0,20,29,0.1)",
                    "depth3": "0 10px 30px 0 rgba(0,20,29,0.1), 0 30px 60px 0 rgba(0,20,29,0.1)",
                    "depth4": "0 10px 40px 0 rgba(0,20,29,0.04), 0 50px 80px 0 rgba(0,20,29,0.1)",
                  },
                  "text": Object {
                    "color": "rgba(0,0,0,0.9)",
                    "placeholder": "rgba(0,0,0,0.3)",
                    "size": "14px",
                  },
                }
              }
            >
              <label
                className="c2 c3"
                htmlFor="guid-12345"
                size="large"
              >
                <styled.div>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "c4",
                          "isStatic": true,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
",
                          ],
                        },
                        "displayName": "styled.div",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "c4",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c4 c5"
                    >
                      Text
                    </div>
                  </StyledComponent>
                </styled.div>
              </label>
            </StyledComponent>
          </styled.label>
        </div>
      </StyledComponent>
    </styled.div>
  </ButtonToggle>
</div>
`;

exports[`ButtonToggle Modern themes renders correctly with small theme 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 .c3 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  height: 40px;
  padding: 0 24px;
  border: 1px solid #668491;
  font-size: 14px;
  font-weight: 600;
  background-color: #FFFFFF;
}

input:checked ~ .c2 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c2 {
  outline: 3px solid #FFDA7F;
}

.c2:hover {
  background-color: #e5f2ee;
  border-color: #003F2E;
}

.c0 {
  display: inline-block;
}

.c0:not(:first-of-type) {
  margin-left: 10px;
}

.c1 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div
  className="c0"
  size="large"
>
  <input
    className="c1"
    id="guid-12345"
    type="radio"
  />
  <label
    className="c2"
    htmlFor="guid-12345"
    size="large"
  >
    <div
      className="c3 c4"
    >
      Button
    </div>
  </label>
</div>
`;
